# PointNetRGPE

./: README.md
point cloud classification unit/: predict_cls.py  train_cls.py
point cloud classification unit/other/: predict_6d_pose.py  train_6d_pose.py
point cloud classification unit/testing_data_1/: 01.pcd  02.txt  03.pcd  03.txt  04.pcd  07.pcd  08.pcd  08.txt  09.pcd  09.txt  10.pcd  11.pcd  11.txt  13.pcd  13.txt  14.pcd  14.txt  16.pcd  16.txt  17.pcd  18.pcd  19.pcd  19.txt  21.pcd  21.txt  22.txt  23.pcd  24.pcd  25.pcd  25.txt  26.txt  27.pcd  28.txt  29.pcd  29.txt  30.txt  31.pcd  31.txt  34.pcd  34.txt  (+55 more)
point cloud classification unit/testing_data_2/: 02.pcd  02.txt  06.pcd  07.txt  08.pcd  08.txt  09.txt  11.pcd  12.pcd  14.txt  15.txt  16.pcd  17.pcd  18.pcd  18.txt  20.txt  23.txt  25.pcd  27.pcd  28.pcd  28.txt  29.pcd  30.pcd  31.txt  32.pcd  33.txt  34.pcd  34.txt  35.txt  38.pcd  39.txt  40.pcd  40.txt  41.pcd  41.txt  44.pcd  45.txt  46.pcd  47.txt  48.pcd  (+47 more)
point cloud classification unit/testing_data_3/: 01.pcd  02.pcd  03.pcd  03.txt  04.pcd  05.pcd  05.txt  06.txt  08.txt  10.pcd  10.txt  100.pcd  100.txt  101.txt  102.pcd  102.txt  104.pcd  105.pcd  107.pcd  11.pcd  11.txt  111.txt  112.pcd  112.txt  116.pcd  117.txt  118.pcd  119.pcd  119.txt  12.txt  120.pcd  122.pcd  123.pcd  124.pcd  128.pcd  129.txt  13.pcd  13.txt  14.txt  (+73 more)
point cloud pre-procession unit/: CMakeLists.txt  test_pcd.cpp
robot grasping pose estimation unit/: predict_6d_pose.py  predict_6d_pose_180.py  predict_6d_pose_360.py  predict_6d_pose_90.py  train_6d_pose.py
(+385 files in other folders)
